// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components: Result matches snapshot 1`] = `
<div
  className="makeStyles-root makeStyles-fail"
>
  < />
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    fail
  </p>
</div>
`;

exports[`components: Result matches snapshot success 1`] = `
<div
  className="makeStyles-root makeStyles-success"
>
  < />
  <p
    className="MuiTypography-root MuiTypography-body1"
  >
    success
  </p>
</div>
`;
